[gd_scene load_steps=2 format=2]

[ext_resource path="res://FirstPage.gd" type="Script" id=1]

[node name="Node" type="Node2D"]
script = ExtResource( 1 )

[node name="buttonConnect" type="Button" parent="."]
margin_left = 336.0
margin_top = 323.0
margin_right = 462.0
margin_bottom = 372.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonDisconnect" type="Button" parent="."]
margin_left = 593.0
margin_top = 324.0
margin_right = 714.0
margin_bottom = 376.0
text = "Disconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditPlayerName" type="LineEdit" parent="."]
margin_left = 325.0
margin_top = 163.0
margin_right = 767.0
margin_bottom = 246.0
placeholder_text = "Enter player name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 434.0
margin_top = 66.0
margin_right = 641.0
margin_bottom = 114.0
text = "Rainy word"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="buttonConnect" to="." method="_on_buttonConnect_pressed"]
[connection signal="pressed" from="buttonDisconnect" to="." method="_on_buttonDisconnect_pressed"]
